--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1{
     padding-left: 20px;
 }
 
-.button{
+.submit{
     /*
     text-decoration: none;
     font-size: 16px;
@@ -60,7 +60,7 @@ h1{
     -moz-transition-duration: 0.5s;
 }
 
-.button:hover {
+.submit:hover {
     color: #006398;
     border: 1px solid #006398;
     box-shadow: 2px 2px 20px #AFE9FF;
