--- a/estilos/lista_usu_veh.css
+++ b/estilos/lista_usu_veh.css
@@ -10,7 +10,6 @@ body{
     padding: 0px;
     display: flex;
     justify-content: center;
-    
 
 }
 
@@ -27,28 +26,61 @@ body{
     border-radius: 15px;
 }
 
-.table {
-    border: 1px solid black;
-    padding: 5px;
-    width: 400px;
-    margin-top: 30px;
-}
-
-td {
-    border-bottom: 1px solid black;
-    padding: 5px;
-    background-color: #E3E4E6;
+table {
+    width: 700px;
+    border-right-color: #ffffff;
+    margin-top: 100px;
+    font-size: 18px;
+    /* /* border: 1px solid #343a40; */
+    border-collapse: collapse; 
+  }
+  
+  th, td {
+    /* border: 1px solid #343a40; */
+    padding: 16px 24px;
     text-align: left;
+  }
+
+  th {
+    background-color: #087f5b;
+    color: #fff;
+    width: 25%;
+  }
+
+  tbody tr:nth-child(odd){
+    background-color: #f8f9fa;
+  }
+
+  
+  tbody tr:nth-child(even){
+    background-color: #e9ecef;
+  }
+
+tbody tr:nth-child(odd){
+    background-color: #f8f9fa;
+  }
+
+  
+tbody tr:nth-child(even){
+    background-color: #e9ecef;
 }
 
+.boton_veh{
+  color: #494949 ;
+	text-transform: uppercase;
+	text-decoration: none;
+	background: #ffffff;
+	padding: 10px;
+	border: 4px solid #494949;
+	display: inline-block;
+	transition: all 0.4s ease 0s;
+}
 
-th{
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: #04AA6D;
-    color: white;
-    width: 20px; 
+.boton_veh:hover{
+  color: #ffffff;
+  background: #5bda56;
+  border-color: #d3d3d3;
+  transition: all 0.4s ease 0s;
 }
 
 .submit{
