--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,13 +1,26 @@
+body{
+    background-image: url(mec_log.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+
 .container{
     margin: 0px;
     padding: 0px;
+    width: 100%;
+    height: 100%;
+    
 }
 
 .content{
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin-top: 350px;
+    align-content: center;
+    margin-top: 310px;
+    
+    
 }
 
 h1{
@@ -25,6 +38,7 @@ h1{
     align-items: center;
     border: black 2px solid;
     border-radius: 15px;
+    background-color: gainsboro;
 }
 .username{
     border: black 1px solid;
