--- a/estilos/ccs_nuevo_usuario.css
+++ b/estilos/ccs_nuevo_usuario.css
@@ -1,7 +1,6 @@
 * {
 	padding: 0;
 	margin: 0;
-	font-family: century gothic;
 	text-align: center;
 }
 
@@ -37,11 +36,15 @@ input[type='submit']{
 	border: none;
 }
 
+p{
+	margin: 18px;
+}
+
 
 .ok {
 	text-align: center;
 	width: 100%;
-	padding: 12px;
+	padding: 0px;
 	background-color: #1e6;
 	color: #fff
 }
