--- a/estilos/lista_usu_veh.css
+++ b/estilos/lista_usu_veh.css
@@ -27,9 +27,10 @@ body{
 }
 
 
-.p{
+#usuname, #usulogin{
     font-size: 30px;
     background-color: #AFE9FF;
+    box-shadow: 5px 5px black;
     border-radius: 15px;
     width: 40%;
     text-align: center;
@@ -45,7 +46,7 @@ body{
 
 #nombre{
   font-size: 50px;
-  margin-right: 35%;
+  margin-right: 40%;
   margin-top: 0%;
   margin-bottom: 0%;
 }
